# myBugreport

./: README.md  my_bugreport.py  pyproject.toml
docs/: PIPELINE_CONTRACT.md
examples/: README.md  bugreport-HONORJMM-AL00-2024-01-29-15-13-04.txt  collect_adb.sh  run_case.sh  simulated_pipeline_output.md
examples/honor_case/: README.md
examples/honor_case/artifacts/: artifacts.json
examples/honor_case/findings/: findings.json  findings_evidence.jsonl
examples/honor_case/records/: records.jsonl
examples/honor_case/report/: report.json  report.md
mybugreport/: __init__.py  config.py  rules.py
pipeline/analyze/: README.md
pipeline/ingest/: README.md
pipeline/report/: README.md
samples/: bugreport.txt  dmesg.txt  findings.json  logcat_threadtime.txt  records.jsonl
samples/rules/: crash.json  network.json  selinux.json
src/mybugreport/: __init__.py  cli.py  forensic_analysis.py  hooks.py  io_utils.py  processor.py  time_utils.py
src/mybugreport/models/: __init__.py
src/mybugreport/pipeline/: __init__.py
src/mybugreport/pipeline/analyze/: __init__.py
src/mybugreport/pipeline/collect/: __init__.py  adb.py
src/mybugreport/pipeline/parse/: __init__.py  manifest.py  parsers.py
src/mybugreport/pipeline/report/: __init__.py  generator.py
src/mybugreport/utils/: __init__.py  serialization.py
tests/: test_analyze_rules.py  test_e2e_mocked.py  test_parse_samples.py  test_report_generation.py  test_smoke.py
tests/data/: README.md
