[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mybugreport"
version = "0.1.0"
description = "ADB-only bugreport post-processing and forensic detection scaffolding"
authors = [{name = "myBugReport Maintainers"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
datalogic = "mybugreport.cli:main"
adb_log_tool = "mybugreport.cli:main"
mybugreport-pipeline = "mybugreport.cli:pipeline_main"
